--- a/project.html
+++ b/project.html
@@ -13,10 +13,10 @@
         <nav> 
             <p class="nav-flex-item-left">Portfo<span class="logo-split">lio</span></p>
             <ul class="nav-flex-item-right">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./project.html">Projects</a></li>
+                <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
 
